Added cron job to send a link to open the door to approved event attendees of luma events

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# Private keys
+.privateKey
+.claude
+authorized_keys.json
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
