--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,8 @@
     "generate-url": "node scripts/generate-access-url.js",
     "notify-attendees": "node scripts/notify-attendees.js",
     "send-test-email": "node scripts/send-test-email.js",
+    "cron": "node scripts/send-event-access-emails.js",
+    "test:cron": "DRY_RUN=true node scripts/send-event-access-emails.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:signature": "node --experimental-vm-modules node_modules/jest/bin/jest.js test/signature-auth.test.js",
     "test:discord": "node --experimental-vm-modules node_modules/jest/bin/jest.js test/discord-access.test.js",
